--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
-@import "helpers/variables";
-@import "helpers/mixins";
-@import "components/table";
-@import "layout/loading";
-@import "pages/gitSearch";
+@import "settings/variables";
+@import "settings/fonts";
+@import "fonts/fonts";
+@import "pages/markets";
+@import "pages/category";
